# poetry-django-ecommerce

./: README.md  pyproject.toml
.github/workflows/: master_eelacars01.yml
data/: categories.csv  products.csv
ecommerce/: settings.py  urls.py
scripts/: category_feeder.py  product_feeder.py
store/: admin.py  cart_session.py  context_processors.py  forms.py  models.py  urls.py  views.py
store/migrations/: 0001_initial.py  0002_alter_order_address.py
store/templates/: 404.html  cart.html  catalog.html  index.html  product_detail.html  signin.html  signup.html  success_signup.html
