[tool.poetry]
name = "django-ecommerce"
version = "0.1.0"
description = "Django Ecommerce"
authors = ["Gabriel Villacis <gab_villacis@hotmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ecommerce"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.7"
psycopg2-binary = "^2.9.5"
pillow = "^9.4.0"
django-environ = "^0.9.0"
django-extensions = "^3.2.1"
django-bootstrap5 = "^22.2"
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
